# schedule-table

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  start.ps1  tailwind.config.js
src/project/: __init__.py  database.py  dependencies.py  main.py
src/project/static/css/: output.css  styles.css
src/project/static/vue/: app.js
src/project/templates/: index.html
src/project/templates/components/: modal.html
