[tool.poetry]
name = "schedule-table"
version = "0.1.0"
description = ""
authors = ["daniiar-mamaev <daniiar.mamaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
granian = { extras = ["reload"], version = "^1.1.1" }
uvicorn = "^0.30.1"
ruff = "^0.4.7"
motor = "^3.4.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".old_venv",
    "migrations",
    "instance",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "N", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
